--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -17,6 +17,11 @@ article {
     .footnotes {
         font-size: 0.9em;
     }
+    img{
+        margin-left: auto;
+        margin-right: auto;
+        display: block
+    }
 }
 
 footer {
