--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,11 +30,9 @@ layout: default
             </p>
           </header>
           <div class="excerpt">
-              {{ post.excerpt | strip_html | escape }}
-            <!--{{ post.content | strip_html | truncate: "250" }}-->
-            <!--<a class="button" href="{{ post.url | prepend: site.baseurl }}">
-              {{ site.theme_settings.str_continue_reading }}
-            </a>-->
+            <a href="{{ post.url | prepend: site.baseurl }}">
+              {{ post.content | strip_html | escape | truncate: "150"}}
+            </a>
           </div>
       </span>
     </div>
