--- a/_sass/layouts/_index.scss
+++ b/_sass/layouts/_index.scss
@@ -4,7 +4,7 @@
     display: inline-block;
     width: 100%;
     height: 100%;
-    font-size: 1.2em;
+    font-size: 1.3em;
     text-align: center;
     color: $header-desc-text-color;
     background: $header-desc-background-color no-repeat;
@@ -12,8 +12,8 @@
 
     /* --- Responsive --- */
     @media screen and (max-width: 850px) {
-        background-size: 130%;
-        font-size: 1.0em
+        background-size: 100%;
+        font-size: 0.7em
     } 
     
     //For white images
@@ -85,14 +85,24 @@
                 transform: scale(1.1);
             }
         }
-    }
-    .excerpt {
-        margin-top: 1em;
-    }
-    .excerpt a{
-        font-size: 1.1em;
-        color: black;
 
+        .excerpt {
+            margin-top: 1em;
+        }
+        .excerpt a{
+            font-size: 1.1em;
+            color: black;
+
+        }
+
+        @media screen and (max-width:850px){
+            h1{
+                font-size: 1.6em;
+            }
+            .excerpt a{
+                font-size: 0.8em;
+            }
+        }
     }
 }
 
