--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- naver verification -->
+    <meta name="naver-site-verification" content="864aa359c3a22e2c88f3b7babf9a1da2e236016d" />
     
     <!-- Main JS (navbar.js, katex_init.js and masonry_init.js)-->
     <script defer=true src="{{ site.baseurl }}/assets/js/main.min.js"></script>
