--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,13 @@ layout: default
     {% if page.author %} - {{ page.author }}{% endif %}
     </p>
   </header>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- content ad -->
+  <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-7894922333422598"
+    data-ad-slot="7558462684"></ins>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
   <section class="post-content">
   {% if page.bootstrap %}
   <div class="bootstrap-iso">
